--- a/New-Memes.html
+++ b/New-Memes.html
@@ -3,16 +3,45 @@
   <head>
     <meta charset="utf-8">
     <title>New Startups</title>
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-    <h1> GroupVenture <h1>
-    <h2> A Better Way To Invest <h2>
-      <a href="index.html">About</a>
-      <a href="New-startups.html">New Startups</a>
-      <a href="Market-report.html">Market Report</a>
-      <a href="http://venturebeat.com/" target="_blank">News</a>
-      <img src="https://fthmb.tqn.com/nkdfSTqlBSF-kWa-0RE9PcmFz7k=/768x0/filters:no_upscale()/feet-face-599c412c22fa3a0011d92add.jpg"
-      alt="Feet?" title="confused guy with feet for hands">
+    <div class="wrapper">
+    <h1> Meme Watch <h1>
+    <h2> serving up the best memes daily <h2>
+    <div id="content">
+      <!-- links -->
+  <a href="index.html">Home</a>
+  <a href="Meme-Market.html">Meme Market</a>
+  <a href="New-Memes.html">Fresh From the Oven</a>
+  <a href="https://www.reddit.com/r/me_irl/" target="_blank">News</a>
+  <p>Here is a one stop shop for memes on the rise
+    <br>Here are some examples:
+  </p>
+
+  <h3>Lemme get a uhhhh...</h3>
+  <img src="https://i.redd.it/2nualt2gtre01.jpg" alt="The new tony hawk game" title="New Shit">
+    <p>This meme really speaks volumes on the real practical uses of skatboards in an attempt to poke fun
+      at the absurd nature of the game.
+    </p>
+
+    <h3>yo where tf my uber taking me</h3>
+    <img src="https://i.redd.it/sxyyw6lpsse01.jpg" title="New Shit" title="1 star">
+      <p>Hahahaha this ones funny, hahaha do you like this one?
+      </p>
+
+      <h3>*plays Running in the 90s while driving in a school zone*</h3>
+      <img src="https://i.imgur.com/jFsNnjR.jpg" title="New Shit" title="LPT: life sucks dude">
+        <p>Huh? yeah.... this meme is cool or what ever
+        </p>
+
+      <h3>Blog post 2/7/18</h3>
+        <p>Yeah, so like my birthday is in 12 days, but heres the thing, I don't care.
+            its like I have everything I want so I am not even pressed at all. Oh also I
+            want to travel, I am planning a trip with my cousin to go to Europe and
+            my first place I want to vist is Amsterdam.
+        </p>
+
 
   </body>
 </html>
