--- a/index.html
+++ b/index.html
@@ -8,19 +8,22 @@
 <body>
 <!--the body is the entire viewable area of the web page. For example
 we can see text, links, images, and media. -->
-
+<div class="wrapper">
   <h1> Meme Watch <h1>
   <h2> serving up the best memes daily <h2>
 
+    <div id="content">
     <!-- links -->
+
 <a href="index.html">Home</a>
 <a href="Meme-Market.html">Meme Market</a>
 <a href="New-Memes.html">Fresh From the Oven</a>
 <a href="https://www.reddit.com/r/me_irl/" target="_blank">News</a>
 
+<img src="http://i0.kym-cdn.com/photos/images/newsfeed/001/262/983/2f0.png" alt="Stonks"
+style="width:680px;height:510px;" title="Welcome to Meme Watch"/>
 
-    <img src="http://i0.kym-cdn.com/photos/images/facebook/001/262/983/2f0.png" alt="A beautiful leaving room"
-    title="Welcome to GroupVenture"/>
+
     <!--
     foldername/ = go inside the folde.
     filename = use a file in the current directory
@@ -32,3 +35,6 @@ we can see text, links, images, and media. -->
   Give it too us now! I want your money! Oh yeah give me that money! right there! right there! don't stop!
   oh yeah! Yeah! Yeah! Yeah! Yeah! Yeah! Yeah! Yeah! Yeah! Yeah! Yeah! Yeah! Yeah! Yeah! Yeah! Yeah! Yeah! Yeah!
 </P>
+
+<h3>about the auther</h3>
+<img src="images/Pic-of-me" alt="Here is a picture of me">
