--- a/New-Memes.html
+++ b/New-Memes.html
@@ -42,6 +42,12 @@
             my first place I want to vist is Amsterdam.
         </p>
 
+        <h3>Blog post 2/9/18</h3>
+        <p>
+          today I am going to the auto show
+
+        </p>
+
 
   </body>
 </html>
