--- a/New-Memes.html
+++ b/New-Memes.html
@@ -11,30 +11,42 @@
     <h2> serving up the best memes daily <h2>
     <div id="content">
       <!-- links -->
-  <a href="index.html">Home</a>
-  <a href="Meme-Market.html">Meme Market</a>
-  <a href="New-Memes.html">Fresh From the Oven</a>
-  <a href="https://www.reddit.com/r/me_irl/" target="_blank">News</a>
+      <a href="index.html">Home</a>
+      <a href="Meme-Market.html">Meme Market</a>
+      <a href="New-Memes.html">Fresh From the Oven</a>
+      <a href="forms.html">sign up</a>
+      <a href="https://www.reddit.com/r/me_irl/" target="_blank">News</a>
   <p>Here is a one stop shop for memes on the rise
     <br>Here are some examples:
   </p>
 
+ <section id="New-memes-pics">
   <h3>Lemme get a uhhhh...</h3>
   <img src="https://i.redd.it/2nualt2gtre01.jpg" alt="The new tony hawk game" title="New Shit">
+  <figcaption>
+    this pucture is cool idk who made it but if I did I would tell you
+  </figcaption>
     <p>This meme really speaks volumes on the real practical uses of skatboards in an attempt to poke fun
       at the absurd nature of the game.
     </p>
 
     <h3>yo where tf my uber taking me</h3>
     <img src="https://i.redd.it/sxyyw6lpsse01.jpg" title="New Shit" title="1 star">
+    <figcaption>
+      Elon put his telsa into space yo!
+    </figcaption>
       <p>Hahahaha this ones funny, hahaha do you like this one?
       </p>
 
       <h3>*plays Running in the 90s while driving in a school zone*</h3>
       <img src="https://i.imgur.com/jFsNnjR.jpg" title="New Shit" title="LPT: life sucks dude">
+      <figcaption>
+        I dont know who made this meme sowy
+      </figcaption>
         <p>Huh? yeah.... this meme is cool or what ever
         </p>
-
+        </section>
+        <section id="Blog-posts">
       <h3>Blog post 2/7/18</h3>
         <p>Yeah, so like my birthday is in 12 days, but heres the thing, I don't care.
             its like I have everything I want so I am not even pressed at all. Oh also I
@@ -42,12 +54,15 @@
             my first place I want to vist is Amsterdam.
         </p>
 
-        <h3>Blog post 2/9/18</h3>
+        <h3>Blog post 2/11/18</h3>
         <p>
-          today I am going to the auto show
-
+        today I went to the auto show, it was a blast. here is a video of my favorite
+        car I saw there, its called the 2019 Mercedes g550 its baller af and has a new face lift
+        so yeah heres the video:
         </p>
 
-
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/-cGPdDPK8GE"
+        frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+        </section>
   </body>
 </html>
