--- a/index.html
+++ b/index.html
@@ -15,14 +15,16 @@ we can see text, links, images, and media. -->
     <div id="content">
     <!-- links -->
 
-<a href="index.html">Home</a>
-<a href="Meme-Market.html">Meme Market</a>
-<a href="New-Memes.html">Fresh From the Oven</a>
-<a href="https://www.reddit.com/r/me_irl/" target="_blank">News</a>
+    <a href="index.html">Home</a>
+    <a href="Meme-Market.html">Meme Market</a>
+    <a href="New-Memes.html">Fresh From the Oven</a>
+    <a href="forms.html">sign up</a>
+    <a href="https://www.reddit.com/r/me_irl/" target="_blank">News</a>
 
+<section id="intro-pic">
 <img src="http://i0.kym-cdn.com/photos/images/newsfeed/001/262/983/2f0.png" alt="Stonks"
 style="width:680px;height:510px;" title="Welcome to Meme Watch"/>
-
+</section>
 
     <!--
     foldername/ = go inside the folde.
@@ -30,11 +32,12 @@ style="width:680px;height:510px;" title="Welcome to Meme Watch"/>
     ../ = leave the current folder and go to parent
     folder
     -->
+<section id="intro-paragraph">
 <P>
   Memewatch is always on the prowl for fresh memes, so come on by and give us your money!
   Give it too us now! I want your money! Oh yeah give me that money! right there! right there! don't stop!
   oh yeah! Yeah! Yeah! Yeah! Yeah! Yeah! Yeah! Yeah! Yeah! Yeah! Yeah! Yeah! Yeah! Yeah! Yeah! Yeah! Yeah! Yeah!
 </P>
-
+</section>
 <h3>about the auther</h3>
 <img src="images/Pic-of-me" alt="Here is a picture of me">
