--- a/Meme-Market.html
+++ b/Meme-Market.html
@@ -11,11 +11,13 @@
     <h2> serving up the best memes daily <h2>
     <div id="content">
       <!-- links -->
-  <a href="index.html">Home</a>
-  <a href="Meme-Market.html">Meme Market</a>
-  <a href="New-Memes.html">Fresh From the Oven</a>
-  <a href="https://www.reddit.com/r/me_irl/" target="_blank">News</a>
+      <a href="index.html">Home</a>
+      <a href="Meme-Market.html">Meme Market</a>
+      <a href="New-Memes.html">Fresh From the Oven</a>
+      <a href="forms.html">sign up</a>
+      <a href="https://www.reddit.com/r/me_irl/" target="_blank">News</a>
 
+<section id="favorite-icecream-flavors">
 <h3>Here are my favorite ice cream flavors</h3>
   <ul>
     <li>choc</li>
@@ -60,7 +62,7 @@
       <td>12,890</td>
     </tr>
   </table>
-
+  </section>
   </body>
 
 </html>
